--- a/thankyou.html
+++ b/thankyou.html
@@ -82,7 +82,7 @@
                                                     Your Order has been placed successfully <br><br><br>
                                                     
                                                     <h3>Tell Your Friends about MooFone<br></h3>
-                                                    <a href="whatsapp://send?text=*BREAKING NEWS*%0A*Banglore based startup MooFone Launches Smart Phone at Rs 499/-*%0AThis phone comes with 4 GB Ram, 64 GB internal memory, 20 MP rear camera and 12 MP front camera %0A Moofone Offers Cash On Delivery and the phone can be ordered through their website http://www.moofone.com" data-action="share/whatsapp/share">
+                                                    <a href="whatsapp://send?text=*BREAKING NEWS*%0A%0A*Banglore based startup MooFone Launches Smart Phone at Rs 499/-*%0A%0AThis phone comes with 4 GB Ram, 64 GB internal memory, 20 MP rear camera and 12 MP front camera. %0A%0AMoofone Offers Cash On Delivery and the phone can be ordered through their website http://www.moofone.com" data-action="share/whatsapp/share">
                                                         <img src="whatsapp-share-button.png" height="70" width="200"></a><br>
                                                         
                                                         <div class="fb-share-button" data-href="http://www.moofone.com" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.moofone.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
