--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Moofone</title>
     <meta name="description" content="Moofone Launches A1 smartphone at Rs 499"/>
+	  <meta property="og:image" content="https://raw.githubusercontent.com/moofone786/moofone/gh-pages/home.png">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
