--- a/placingorder.html
+++ b/placingorder.html
@@ -83,7 +83,9 @@
                                                     <font color = "white"><center>
                                                         <img src="AggressiveGrouchyHammerkop-max-1mb.gif"><br>
                                                         Placing Order <br>
-                                                        Please Wait..
+                                                        Please Wait..<br>
+							    Please do not hit back or refresh <br>
+							  
                                                      <br><br><br><br><br>
 						</div>
 					</div>
