--- a/orderform.html
+++ b/orderform.html
@@ -78,7 +78,7 @@
                                                                 Full Name :  
                                                             </td>
                                                             <td>
-                                                                <input type="text"> 
+                                                            <font color="black">    <input type="text"> </font>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -90,7 +90,7 @@
                                                                 Address : 
                                                             </td>
                                                             <td>
-                                                                <textarea></textarea>
+                                                          <font color="black">     <textarea></textarea></font>  
                                                             </td>
                                                         </tr>
 <tr>
@@ -102,7 +102,7 @@
                                                                 State :  
                                                             </td>
                                                             <td>
-                                                                <input type="text">
+                                                                <font color="black">    <input type="text"> </font>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -114,7 +114,7 @@
                                                                 City :  
                                                             </td>
                                                             <td>
-                                                                <input type="text">
+                                                                <font color="black">    <input type="text"> </font>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -127,7 +127,7 @@
                                                                 Pin code :  
                                                             </td>
                                                             <td>
-                                                                <input type="text">
+                                                               <font color="black">    <input type="text"> </font>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -140,7 +140,7 @@
                                                                 Phone : 
                                                             </td>
                                                             <td>
-                                                                <input type="text">
+                                                               <font color="black">    <input type="text"> </font>
                                                             </td>
                                                         </tr>
                                                         <tr>
