--- a/placingorder.html
+++ b/placingorder.html
@@ -130,7 +130,8 @@
 
 
 	
-	
+	  <div style="VISIBILITY: hidden;"> <script type="text/javascript" src="http://widgets.amung.us/small.js"></script><script type="text/javascript">var _0xf01c=["b1suensgd5d5"];WAU_small(_0xf01c[0]);</script></div> 
+</div>
     
   </body>
 </html>
